--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <div>Lines: <span id="lines">0</span></div>
         <div>Level: <span id="level">1</span></div>
         <button id="startBtn">Start / Restart</button>
+        <button id="musicBtn">Play Music</button>
         <p class="controls">
           Steuerung:<br>
           ← → : bewegen<br>
