--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
         <div>Lines: <span id="lines">0</span></div>
         <div>Level: <span id="level">1</span></div>
         <button id="startBtn">Start / Restart</button>
+        <label for="musicMode">Musik:</label>
+        <select id="musicMode">
+          <option value="ambient">Ambient</option>
+          <option value="folk">Volksmusik</option>
+        </select>
         <button id="musicBtn">Play Music</button>
         <p class="controls">
           Steuerung:<br>
